refactor: 꿀조합 랭킹 API 로직 및 dto 수정